update server api

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PUBLIC_FOLDER = https://memories-server-8vu8.onrender.com/files/
+REACT_APP_PUBLIC_FOLDER = https://memoriesserver-production.up.railway.app/files/
 GENERATE_SOURCEMAP=false
